<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">INF Senior Project</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="add_course">Add Course</string>
    <string name="update_course">Update Course</string>
    <string name="name">Course Name</string>
    <string name="room">Room</string>
    <string name="time">Time - Slot</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="event_title_label">Title</string>
    <string name="event_title_hint">Enter title for event</string>
    <string name="event_details_label">Details</string>
    <string name="event_solved_label">Solved?</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="date_time_picker_title">Date/Time of crime:</string>
    <string name="date_change">Change date</string>
    <string name="time_change">Change time</string>
    <string name="new_event">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Track Activities</string>
    <string name="delete_event">Delete</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Course Catalog</item>
        <item>Pre-Registration</item>
        <item>Timetable</item>
        <item>Events</item>
        <item>About</item>
        <item>Log Out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_catalogue</item>
        <item>@drawable/ic_registration</item>
        <item>@drawable/ic_timetable</item>
        <item>@drawable/ic_events</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_logout</item>
    </array>

    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">INF 491</string>
    <string name="seniorproject">Senior Project</string>
    <string name="slogan">Student Schedule Planner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>

</resources>